# In-Memory-Analytics-with-Apache-Arrow

./: .gitignore  Cargo.toml
chapter1/rust/: examples.rs  todo.rs
chapter2/rust/: csv_reader.rs  csv_writer.rs  json_reader.rs  parquet_reader_writer.rs
chapter3/rust/: elastic.rs
chapter4/rust/: generate_file.rs
chapter5/rust/: example_cdata.rs
chapter6/rust/: compute_functions.rs  compute_or_not.rs  timer.rs
chapter7/rust/: datasets_api.rs  s3_datasets.rs  streaming_engine.rs  write_partitioned.rs
chapter8/rust/: main.rs
utils/: s3file.rs
