[package]
name = "In-Memory-Analytics-with-Apache-Arrow"
version = "0.0.0"

[[example]]
name = "ch1"
path = "chapter1/rust/examples.rs"

[[example]]
name = "ch2_csv_reader"
path = "chapter2/rust/csv_reader.rs"

[[example]]
name = "ch2_csv_writer"
path = "chapter2/rust/csv_writer.rs"

[[example]]
name = "ch2_json_reader"
path = "chapter2/rust/json_reader.rs"

[[example]]
name = "ch6_compute_functions"
path = "chapter6/rust/compute_functions.rs"

[[example]]
name = "ch6_compute_or_not"
path = "chapter6/rust/compute_or_not.rs"

[[example]]
name = "ch7"
path = "chapter7/rust/write_partitioned.rs"

[[example]]
name = "ch8"
path = "chapter8/rust/main.rs"

example = [
  { name = "ch1", path = "chapter1/rust" },
  { name = "ch2_csv_writer", path = "chapter2/rust/csv_writer" },
  { name = "ch3", path = "chapter3/rust" },
  { name = "ch4", path = "chapter4/rust" },
  { name = "ch5", path = "chapter5/rust" },
  { name = "ch6", path = "chapter6/rust" },
]

[dependencies]
arrow = { version = "*" }
parquet = "37.0.0"
aws-config = "0.55.1"
aws-sdk-s3 = "0.26.0"
